more layout updates + reduce motion

--- a/website/src/routes/styles.css
+++ b/website/src/routes/styles.css
@@ -1,4 +1,4 @@
-@layer reset, globals, layouts, routes;
+@layer reset, globals, layouts, routes, overrides;
 
 @import '@acab/reset.css' layer(reset);
 
@@ -22,5 +22,16 @@
 	/* this bullshit cannot be turned off */
 	#svelte-announcer {
 		display: none;
+	}
+}
+
+@layer overrides {
+	@media (prefers-reduced-motion: reduce) {
+		* {
+			animation-duration: 0.01ms !important;
+			animation-iteration-count: 1 !important;
+			transition-duration: 0.01ms !important;
+			animation-delay: 0.01ms !important;
+		}
 	}
 }
